--- a/StartDSTwithParams.conf
+++ b/StartDSTwithParams.conf
@@ -5,13 +5,13 @@
 
 
 [STEAM]
-DST_steamcmd_dir    			= c:\steamcmd
+DST_steamcmd_dir    			= !USERPROFILE!\steamcmd
 DST_dst_bin                  	= steamapps\common\Don't Starve Together Dedicated Server\bin64
 
 
 [SERVER]
 [   parameters for dontstarve_dedicated_server_nullrenderer executable                        ]
-DST_persistent_storage_root  	= G:\Klei
+DST_persistent_storage_root  	= !USERPROFILE!\Klei
 DST_conf_dir                 	= DoNotStarveTogether    	
 DST_cluster                  	= NonExistentCluster1
 
