Major update. DST_exe parameter added. steam.exe in separate console.

--- a/StartDSTwithParams.conf
+++ b/StartDSTwithParams.conf
@@ -7,7 +7,7 @@
 [STEAM]
 DST_steamcmd_dir    		    = !USERPROFILE!\steamcmd
 DST_dst_bin                  	= steamapps\common\Don't Starve Together Dedicated Server\bin64
-
+DST_exe 
 
 [SERVER]
 [   parameters for dontstarve_dedicated_server_nullrenderer executable                        ]
