--- a/StartDSTwithParams.conf
+++ b/StartDSTwithParams.conf
@@ -7,7 +7,7 @@
 [STEAM]
 DST_steamcmd_dir    		    = !USERPROFILE!\steamcmd
 DST_dst_bin                  	= steamapps\common\Don't Starve Together Dedicated Server\bin64
-DST_exe 
+DST_exe                         = dontstarve_dedicated_server_nullrenderer_x64.exe 
 
 [SERVER]
 [   parameters for dontstarve_dedicated_server_nullrenderer executable                        ]
@@ -36,5 +36,5 @@ DST_my_mods                     = MyMods
 [   Key    - shard's name (as listed at DST_shards).                                          ]
 [   Value  - X Y (space separated, may be negative for second screen at left)                 ]
 
-Master                          = 1900 4
-Caves                           = 1900 600
+Master                          = 1  1
+Caves                           = 50 50 
